using UnityEngine;

public interface IPlayerRotationStrategy 
{
    void RotatePlayer();
}
